# vrad-rtx

./: .gitignore  README.md
docs/: cpu_reduction_plan_2026-02-13.md
src/: buildvradprojects.bat  createvradprojects.bat  rebuildvradprojects.bat
src/lib/common/x64/2015/release/: lzma.lib
src/public/: bspfile.h  chunkfile.cpp  filesystem_init.cpp
src/public/mathlib/: ssemath.h
src/raytrace/: direct_lighting_gpu.cpp  direct_lighting_gpu.h  gpu_scene_data.h  optix_kernels.cu  raytrace.vpc  raytrace_cuda.cu  raytrace_optix.cpp  raytrace_optix.h  raytrace_shared.h
src/utils/common/: threads.cpp  threads.h
src/utils/lzma/: lzma.vpc
src/utils/vrad/: direct_lighting_gpu_vrad.cpp  hardware_profiling.cpp  hardware_profiling.h  leaf_ambient_lighting.cpp  lightmap.cpp  lightmap.h  trace.cpp  vismat.cpp  vrad.cpp  vrad.h  vrad_dll.vpc  vradstaticprops.cpp
src/vpc_scripts/: groups.vgc  projects.vgc
tools/benchmark/: CMakeLists.txt  vrad_simd_bench.cpp
